fixed horizontal scrolling

--- a/html-css/module-8/css/desktop.css
+++ b/html-css/module-8/css/desktop.css
@@ -1,6 +1,6 @@
 @media (min-width: 939px) {
   .container {
-    width: 939px;
+    max-width: 939px;
   }
 
   .card {
