--- a/html-css/module-8/css/tablet.css
+++ b/html-css/module-8/css/tablet.css
@@ -1,6 +1,6 @@
 @media (min-width: 768px) {
   .container {
-    width: 668px;
+    max-width: 668px;
   }
 
   .baner {
